brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_date_with_complex_format.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "date \"+%a %b %d{%Y}\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "date",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"+%a %b %d{%Y}\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
