brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_extglob_plus_patterns.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "shopt -s extglob\necho +(a)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "shopt",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-s",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "extglob",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "+(a)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
