brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_file_operations.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls /tmp 2>/dev/null | head -1\ntest -f /tmp && echo \"tmp exists\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "/tmp",
                    loc: "[location]",
                  )),
                  IoRedirect(File(Some(2), Write, Filename(Word(
                    value: "/dev/null",
                    loc: "[location]",
                  )))),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "head",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-1",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "test",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-f",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "/tmp",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
          additional: [
            And(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "echo",
                    loc: "[location]",
                  )),
                  suffix: Some(CommandSuffix([
                    Word(Word(
                      value: "\"tmp exists\"",
                      loc: "[location]",
                    )),
                  ])),
                )),
              ],
            )),
          ],
        ), Sequence),
      ]),
    ],
  ),
)
